--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
+        "@types/uuid": "^9.0.8",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
@@ -25,6 +26,7 @@
     },
     "dependencies": {
         "chart.js": "^4.4.2",
-        "react-chartjs-2": "^5.2.0"
+        "react-chartjs-2": "^5.2.0",
+        "uuid": "^9.0.1"
     }
 }
