--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-react": "^0.8.1",
         "chart.js": "^4.4.2",
         "react-chartjs-2": "^5.2.0",
         "uuid": "^9.0.1"
