--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "chart.js": "^4.4.2",
         "react-chartjs-2": "^5.2.0",
         "react-paginate": "^8.2.0",
+        "react-signature-canvas": "^1.0.6",
         "tailwind-scrollbar-hide": "^1.1.7",
         "uuid": "^9.0.1"
     }
