--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "react-chartjs-2": "^5.2.0",
         "react-paginate": "^8.2.0",
         "react-signature-canvas": "^1.0.6",
+        "react-toastify": "^10.0.6",
         "tailwind-scrollbar-hide": "^1.1.7",
         "uuid": "^9.0.1"
     }
