--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "react-signature-canvas": "^1.0.6",
         "react-toastify": "^10.0.6",
         "tailwind-scrollbar-hide": "^1.1.7",
-        "uuid": "^9.0.1"
+        "uuid": "^9.0.1",
+        "xlsx": "^0.18.5"
     }
 }
