--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-react": "^0.8.1",
         "chart.js": "^4.4.2",
+        "html2canvas": "^1.4.1",
+        "jspdf": "^2.5.2",
         "react-chartjs-2": "^5.2.0",
         "react-paginate": "^8.2.0",
         "react-signature-canvas": "^1.0.6",
